--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PI-223-1-7\DAL.csproj" />
+  </ItemGroup>
+
 </Project>
