--- a/Mapping/Mapping.csproj
+++ b/Mapping/Mapping.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="AutoMapper" Version="14.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PI-223-1-7\DAL.csproj" />
+  </ItemGroup>
+
 </Project>
