--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -16,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj" />
+    <ProjectReference Include="..\Mapping\Mapping.csproj" />
     <ProjectReference Include="..\PI-223-1-7\DAL.csproj" />
   </ItemGroup>
 
