--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\PI-223-1-7\DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
