Enhance user management system and JWT authentication
- Changed `IUserService` to public and added user/role management methods.
- Implemented user management features in `UserService` with logging.
- Updated `DTOs` for user creation, updating, and role management.
- Modified `AccountController` to include JWT token generation.
- Registered `IUserService` in `Program.cs` for dependency injection.
- Added JWT settings in `appsettings.json`.
- Enhanced `ApiService` with user management methods.
- Created `AdminUsersController` for user management API.
- Updated `AdminController` for user management views and actions.
- Created/modified Razor views for user management interfaces.
- Added `TokenRefreshMiddleware` for token expiration handling.
- Created `admin.css` for styling the admin panel.
- Updated various view models to support new user management features.
- Improved overall application structure for better error handling and user feedback.

--- a/PL/appsettings.json
+++ b/PL/appsettings.json
@@ -1,9 +1,18 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LibratyDb;Trusted_Connection=True;"
+  },
+  "JwtSettings": {
+    "SecretKey": "C2eM7r@A9zQwB!k4P1vLx#8nFsGjUeHt",
+    "Issuer": "LibraryAPI",
+    "Audience": "LibraryUsers",
+    "ExpiryInDays": 7
+  }
 }
