--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -48,13 +48,13 @@ jobs:
         run: dotnet build -c Release --no-restore
 
 
-      - name: Tests with coverage
-        run: |
-          dotnet test -c Release --no-build `
-          /p:CollectCoverage=true `
-          /p:CoverletOutput=TestResults/coverage.xml `
-          /p:CoverletOutputFormat=opencover
-        shell: pwsh
+      # - name: Tests with coverage
+      #   run: |
+      #     dotnet test -c Release --no-build `
+      #       /p:CollectCoverage=true `
+      #       /p:CoverletOutput=TestResults/coverage.xml `
+      #       /p:CoverletOutputFormat=opencover
+      #   shell: pwsh
 
       - name: SonarScanner End
         run: dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
